--- a/fitness-and-health-website/Mainpage/stylesheet.css
+++ b/fitness-and-health-website/Mainpage/stylesheet.css
@@ -66,7 +66,7 @@ body {
     }
 
     .hover-effects {
-        color: #b0b0b0 !important;
+        color: #ffffff !important;
     }
 
     .hover-effects:hover {
@@ -250,7 +250,6 @@ html, body {
 
 .styleForEmailInMain {
     color: #F6E8D5;
-    text-decoration: none;
     font-weight: lighter;
 }
 
