--- a/fitness-and-health-website/Nutrition/stylesheet-nutrition.css
+++ b/fitness-and-health-website/Nutrition/stylesheet-nutrition.css
@@ -64,8 +64,7 @@ body {
     }
 
     input.form-control::placeholder,
-    textarea.form-control::placeholder,
-    option.form-control::placeholder
+    textarea.form-control::placeholder
     {
         color: #757575;
         opacity: 1;
@@ -77,7 +76,7 @@ body {
 
 
     select.form-select:invalid {
-        color: grey;
+        color: white;
     }
 
     footer {
@@ -257,6 +256,7 @@ a.hover-effects {
 
 a.hover-effects:hover {
     color: #6AA84F;
+    transition: ease-in-out 0.3s;
 }
 
 @keyframes change-font-size {
