--- a/fitness-and-health-website/Shop/stylesheet-shop.css
+++ b/fitness-and-health-website/Shop/stylesheet-shop.css
@@ -9,6 +9,12 @@ html, body{
     background-size: cover;
 }
 @media (prefers-color-scheme: dark) {
+
+    .list-group-item {
+        background-color: transparent;
+        color: #e0e0e0 !important;
+    }
+
     body {
         background-color: #121212;
         color: #e0e0e0;
@@ -35,24 +41,35 @@ html, body{
 
     .form-container,
     .explanation-container {
-        background-color: #2d2d2d;
-        color: #e0e0e0;
+        background-color: #2d2d2d !important;
+        color: #e0e0e0; !important;
     }
 
     .text-muted {
-        color: #b0b0b0;
+        color: #a0a0a0 !important;
     }
 
-    .list-group-item {
-        background-color: transparent;
-        color: #e0e0e0;
+    .text-color {
+        color: #e0e0e0 !important;
     }
+
+
 
     .form-control,
-    .form-select {
+    .form-select,
+    .form-control:focus,
+    .form-select:focus{
         background-color: #333;
         color: #fff;
         border-color: #555;
+    }
+
+    input.form-control::placeholder,
+    textarea.form-control::placeholder,
+    option.form-control::placeholder
+    {
+        color: #757575;
+        opacity: 1;
     }
 
     .btn-custom {
@@ -72,6 +89,7 @@ html, body{
     .card {
         background-color: #2d2d2d;
         border-color: #444;
+        color: #e0e0e0;
     }
 
     .card-title {
@@ -82,6 +100,13 @@ html, body{
         color: #b0b0b0;
     }
 
+    .card th, .card td {
+        color: #e0e0e0 !important;
+    }
+
+    .card th {
+        background-color: #5a8f3d;
+    }
 
     .modal-content {
         background-color: #2d2d2d;
@@ -284,4 +309,5 @@ a.hover-effects {
 
 a.hover-effects:hover {
     color: #6AA84F;
+    transition: ease-in-out 0.3s;
 }
