--- a/fitness-and-health-website/Training/stylesheet-training-plans.css
+++ b/fitness-and-health-website/Training/stylesheet-training-plans.css
@@ -46,6 +46,7 @@ body {
 @media (max-width: 48em) {
     .form-container, .explanation-container {
         margin-bottom: 1.25rem;
+        margin-top: 1rem;
     }
 
     .hero h1 {
@@ -299,6 +300,7 @@ footer a:hover {
 
 .explanation-container {
     background-color: #F6E8D5;
+    margin-top: 4rem;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
