--- a/fitness-and-health-website/Training/stylesheet-training-plans.css
+++ b/fitness-and-health-website/Training/stylesheet-training-plans.css
@@ -300,8 +300,14 @@ footer a:hover {
 
 .explanation-container {
     background-color: #F6E8D5;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.further-explanation-container {
     margin-top: 4rem;
     border-radius: 10px;
+    border: 1px solid #6AA84F;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
