--- a/fitness-and-health-website/Tracker/tracker.css
+++ b/fitness-and-health-website/Tracker/tracker.css
@@ -1,3 +1,10 @@
+html, body
+{
+    font-family:  sans-serif;
+    overflow-x: hidden;
+    background-color: #F9F4E6;
+    color: #333;
+}
 .tracker-container {
     background-color: white;
     border-radius: 10px;
@@ -12,9 +19,12 @@
         color: #e0e0e0;
     }
 
-    .hero-with-carousel,
-    .carousel-background{
-        background-color: #121212;
+    .tracker-container {
+        background-color: #121212 !important;
+    }
+
+    #tableForWeeks {
+        background: #121212 !important;
     }
 
     .navbar {
@@ -53,6 +63,10 @@
 
     .hover-effects {
         color: #ffffff !important;
+    }
+
+    .hover-effects:hover {
+        color: #6AA84F !important;
     }
 
 
@@ -139,4 +153,59 @@ input[type="checkbox"] {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+
+.textInNavBar {
+    color: #F6E8D5 !important;
+    font-weight: lighter;
+    font-size: 18px;
+}
+
+.textInNavBar:hover {
+    color: #6AA84F !important;
+}
+
+.navbar {
+    background-color: #2A1A14;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    font-size: 18px;
+
+}
+
+.navbar-nav .nav-link img {
+    filter: invert(1);
+}
+
+.navbar-fixed {
+    /*position: fixed;*/
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+
+footer {
+    color: #F6E8D5;
+    padding: 20px 0;
+    border-radius: 10px;
+    background: #1a1a1a; !important;
+}
+
+footer h5.text-in-fotter {
+    color: #F6E8D5;
+    font-size: 1.5rem;
+}
+
+footer a {
+    color: #ffffff;
+    transition: color 0.3s ease;
+}
+
+footer a:hover {
+    color: #6AA84F !important;
+}
+
+.text-in-fotter {
+    color: #F6E8D5 !important;
 }
