Fixed some warnings

--- a/fitness-and-health-website/Mainpage/stylesheet.css
+++ b/fitness-and-health-website/Mainpage/stylesheet.css
@@ -61,7 +61,7 @@ body {
     {
         background-color: #1a1a1a; !important;
     }
-    .text-in-fotter {
+    .text-in-footer {
         color: #e0e0e0 !important;
     }
 
@@ -466,7 +466,7 @@ footer {
     border-radius: 10px;
 }
 
-footer h5.text-in-fotter {
+footer h5.text-in-footer {
     color: #F6E8D5;
     font-size: 1.5rem;
 }
@@ -480,6 +480,6 @@ footer a:hover {
     color: #F6E8D5;
 }
 
-.text-in-fotter {
+.text-in-footer {
     color: #F6E8D5 !important;
 }
