--- a/fitness-and-health-website/Shop/stylesheet-shop.css
+++ b/fitness-and-health-website/Shop/stylesheet-shop.css
@@ -265,7 +265,7 @@ footer{
     border-radius: 10px;
 }
 
-footer h5.text-in-fotter {
+footer h5.text-in-footer {
     color: #F6E8D5;
     font-size: 1.5rem;
 }
